samples/_failures_safe/1761075721_bbc4dd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_84284328.c: In function ‘main’:
./samples/SAFE/__tmp_84284328.c:158:23: error: expected ‘;’ at end of input
  158 |         cleanup_buffer
      |                       ^
      |                       ;
./samples/SAFE/__tmp_84284328.c:158:9: error: expected declaration or statement at end of input
  158 |         cleanup_buffer
      |         ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_84284328.c:158:9: error: expected declaration or statement at end of input
